--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,4 @@
 title: Hardik Jaiswal
-theme: jeykll-theme-minimal
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
