--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Hardik Jaiswal
+description: Building things in bits and bytes ☘️
 logo: /assets/img/head-icon.png
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
